# docs-pkg

./: .pre-commit-config.yaml  README.md  install_openssl.sh  mkdocs.yml  pyproject.toml  vercel.json
docs/: index.md
docs/api/: bar.md  foo.md  index.md
docs/intro/: layout.md  tips.md  vercel.md
docs/reqs/: vercel.txt
docs/usage/: bar.md  foo.md  index.md
src/bar/: README.md  pyproject.toml
src/bar/src/bar/: main.py
src/foo/: README.md  pyproject.toml
src/foo/src/foo/: main.py
