[project]
name = "docs-pkg"
version = "0.1.3"
description = "Default template for PDM package"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" },
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"

[project.license]
text = "MIT"

[tool.pdm]
package-type = "application"
