[project]
classifiers = [
    "Development Status :: 6 - Mature",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
name = "docs-pkg"
version = "0.1.3"
description = "Default template for PDM package"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" },
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/lmmx/docs-pkg"
Repository = "https://github.com/lmmx/docs-pkg.git"

[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
docs = [
    "mkdocs-material[recommended,imaging]>=9.5.2",
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-section-index>=0.3.8",
    "markdown-mdantic>=2.1.0",
]

[tool.ruff]
ignore = ["C408", "C901", "E501", "E741"]
ignore-init-module-imports = true
select = ["C", "E", "F", "I", "W"]

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.per-file-ignores]
# Ignore `E401` (unused imports) in all `__init__.py` files.
"__init__.py" = ["E401"]

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true
