[project]
name = "bar"
version = "0.1.0"
description = "bar"
authors = [
    {name = "Louis Maddox", email = "louismmx@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
