[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [
    {email = "louismmx@gmail.com", name = "Louis Maddox"},
]
dependencies = []
description = "foo"
license = {text = "MIT"}
name = "foo"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pdm]
package-type = "library"
